--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,16 +5,30 @@
     "baseUrl": "src",
     "esModuleInterop": true,
     "importHelpers": true,
-    "jsx": "react",
-    "lib": ["dom", "esnext"],
+    "jsx": "preserve",
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "moduleResolution": "node",
     "noEmit": true,
     "sourceMap": true,
     "target": "es6",
     "strict": true,
     "noUnusedLocals": false,
-    "noUnusedParameters": false
+    "noUnusedParameters": false,
+    "allowJs": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "resolveJsonModule": true,
+    "isolatedModules": true
   },
-  "include": ["src", "@types"],
-  "exclude": ["public"]
+  "include": [
+    "src",
+    "@types"
+  ],
+  "exclude": [
+    "public"
+  ]
 }
