--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/seed-random": "^2.2.0",
     "emotion": "^10.0.14",
     "react": "^16.8.6",
+    "react-dnd": "^9.3.2",
+    "react-dnd-html5-backend": "^9.3.2",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "seed-random": "^2.2.0",
