--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook"
+    "story": "start-storybook -s ./public -p 6006",
+    "build-story": "build-storybook"
   },
   "dependencies": {
     "@types/seed-random": "^2.2.0",
