--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,7 @@
     "esModuleInterop": true,
     "importHelpers": true,
     "jsx": "preserve",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "noEmit": true,
     "sourceMap": true,
@@ -24,11 +21,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "include": [
-    "src",
-    "@types"
-  ],
-  "exclude": [
-    "public"
-  ]
+  "include": ["src", "@types"],
+  "exclude": ["public"]
 }
