--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,26 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
     "baseUrl": "src",
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
+    "isolatedModules": true,
     "jsx": "preserve",
     "lib": ["dom", "esnext"],
+    "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
-    "sourceMap": true,
-    "target": "es6",
-    "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "allowJs": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "es6"
   },
-  "include": ["src", "@types"],
-  "exclude": ["public"]
+  "exclude": ["public"],
+  "include": ["src", "@types"]
 }
