--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "build-story": "build-storybook"
   },
   "dependencies": {
-    "@types/seed-random": "^2.2.0",
     "emotion": "^10.0.14",
+    "polished": "^3.4.1",
+    "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-dnd": "^9.3.2",
     "react-dnd-html5-backend": "^9.3.2",
@@ -29,8 +30,10 @@
     "@storybook/react": "^5.1.9",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.6",
+    "@types/ramda": "^0.26.21",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "@types/seed-random": "^2.2.0",
     "@types/tinycolor2": "^1.4.2",
     "babel-loader": "^8.0.6",
     "typescript": "3.4.5"
