--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
   },
   "dependencies": {
     "@types/debounce": "^1.2.0",
+    "awesome-debounce-promise": "^2.1.0",
     "debounce": "^1.2.0",
     "emotion": "^10.0.14",
     "polished": "^3.4.1",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
+    "react-async-hook": "^3.4.0",
     "react-dnd": "^9.3.2",
     "react-dnd-html5-backend": "^9.3.2",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "seed-random": "^2.2.0",
-    "tinycolor2": "^1.4.1"
+    "tinycolor2": "^1.4.1",
+    "use-constant": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
